changed merging by context, changed structural to functional

--- a/cellchat_for_tensor/04_cellchat_timing.ipynb
+++ b/cellchat_for_tensor/04_cellchat_timing.ipynb
@@ -51,12 +51,13 @@
     "\n",
     "RhpcBLASctl::blas_set_num_threads(1) # no multithreading\n",
     "\n",
-    "cell_grouper<-'majorType'"
+    "cell_grouper<-'majorType'\n",
+    "type_ = 'functional'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "available-ordering",
    "metadata": {},
    "outputs": [],
@@ -72,6 +73,18 @@
     "group<-opts[['group']]\n",
     "seed<-opts[['seed']]\n",
     "set.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eastern-attraction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seed=NULL\n",
+    "# number = 3\n",
+    "# group = 1"
    ]
   },
   {
@@ -108,27 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "adjusted-rainbow",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # load the UMI counts\n",
-    "# if (!group){\n",
-    "#     counts<-lapply(setNames(sample.names, sample.names), function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))\n",
-    "# }else{ # group by context\n",
-    "#     by.context<-lapply(setNames(contexts, contexts), function(context) names(sample_context_map[sample.names][sample_context_map[sample.names] == context]))\n",
-    "    \n",
-    "#     group_by_context<-function(context){\n",
-    "#         sns<-by.context[[context]]       \n",
-    "#         counts<-lapply(sns, function(sn) t(read.csv(paste0(expression_data_path, sn, '.csv'), row.names = 1)))    \n",
-    "#         counts<-do.call(cbind, counts)\n",
-    "#         return (counts)\n",
-    "#     }\n",
-    "#     counts<-lapply(setNames(contexts, contexts), function(context) group_by_context(context))                   \n",
-    "                    \n",
-    "# }\n",
-    "\n",
     "# load the UMI counts\n",
     "read_sample_h5<-function(sn){\n",
     "    counts<-h5read(paste0(input_path, 'umi_per_sample.h5'), sn)\n",
@@ -159,7 +156,11 @@
     "# cell.types<-Reduce(intersect, lapply(sample.names, function(sn) unique(md.cell[md.cell$sampleID == sn, cell_grouper])))\n",
     "cell.types<-Reduce(intersect, lapply(counts, function(df) unique(md.cell[colnames(df), cell_grouper])))\n",
     "cell.ids<-rownames(md.cell[md.cell[[cell_grouper]] %in% cell.types, ])   \n",
-    "counts<-lapply(setNames(counts, counts), function(df) df[colnames(df) %in% cell.ids,])                      "
+    "# counts<-lapply(setNames(counts, counts), function(df) df[,colnames(df) %in% cell.ids])  # lapply version slow for some reason, see for loop below                    \n",
+    " for (n in names(counts)){ \n",
+    "    df<-counts[[n]]\n",
+    "    counts[[n]]<-df[,colnames(df) %in% cell.ids]\n",
+    "}"
    ]
   },
   {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "restricted-columbia",
    "metadata": {},
    "outputs": [],
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "based-location",
    "metadata": {},
    "outputs": [
@@ -245,7 +246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono NK Plasma \n"
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono NK Plasma \n",
+      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Mega Plasma \n"
      ]
     },
     {
@@ -262,8 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Macro Mega Mono Neu NK Plasma \n",
-      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Neu Plasma \n"
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono NK Plasma \n",
+      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Mega Plasma \n"
      ]
     },
     {
@@ -280,8 +282,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono Neu NK Plasma \n",
-      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Neu Plasma \n"
+      "The cell groups used for CellChat analysis are  B CD4 CD8 DC Mega Mono NK Plasma \n",
+      "The cell-cell communication related with the following cell groups are excluded due to the few number of cells:  Mega Plasma \n"
      ]
     },
     {
@@ -290,6 +292,50 @@
      "text": [
       "Merge the following slots: 'data.signaling','net', 'netP','meta', 'idents', 'var.features' , 'DB', and 'LR'.\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute signaling network similarity for datasets 1 2 3 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n",
+      "Warning message in sqrt((entropia((Pg + Ph)/2) - (entropia(pg) + entropia(ph))/2)/log(2)):\n",
+      "“NaNs produced”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manifold learning of the signaling networks for datasets 1 2 3 \n",
+      "Classification learning of the signaling networks for datasets 1 2 3 \n",
+      "Compute the distance of signaling networks between datasets 1 2 \n",
+      "Compute the distance of signaling networks between datasets 1 3 \n",
+      "Compute the distance of signaling networks between datasets 2 3 \n"
      ]
     }
    ],
@@ -319,18 +365,26 @@
     "\n",
     "# merge and analyze\n",
     "cellchat <- mergeCellChat(covid.list, add.names = names(covid.list))\n",
-    "cellchat <- computeNetSimilarityPairwise(cellchat, type = 'structural')\n",
-    "cellchat <- netEmbedding(cellchat, type = 'structural')\n",
-    "cellchat <- netClustering(cellchat, type = 'structural',  do.parallel = F, do.plot = F)\n",
+    "cellchat <- computeNetSimilarityPairwise(cellchat, type = type_)\n",
+    "cellchat <- netEmbedding(cellchat, type = type_)\n",
+    "cellchat <- netClustering(cellchat, type = type_,  do.parallel = F, do.plot = F)\n",
     "# Manifold learning of the signaling networks for datasets \n",
     "pairwise_comparisons<-sapply(as.data.frame(combn(seq(1:length(covid.list)),2)), \n",
     "                         function(x) as.numeric(x), simplify = F) # pairwise combination of elements\n",
     "\n",
     "for (pc in names(pairwise_comparisons)){\n",
-    "    path.dist<-rankSimilarity_(cellchat, type = 'structural', comparison1 = 1:length(covid.list),\n",
+    "    path.dist<-rankSimilarity_(cellchat, type = type_, comparison1 = 1:length(covid.list),\n",
     "                               comparison2 = pairwise_comparisons[[pc]]) \n",
     "}                      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "systematic-postcard",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
