--- a/cellchat_for_tensor/05A_cellchat_classification.ipynb
+++ b/cellchat_for_tensor/05A_cellchat_classification.ipynb
@@ -39,6 +39,7 @@
    "source": [
     "# parameters\n",
     "cell_grouper<-'majorType'\n",
+    "type_<-'functional'\n",
     "seed = 888\n",
     "# inputs\n",
     "group = FALSE\n",
@@ -224,8 +225,8 @@
     "\n",
     "# merge and analyze\n",
     "cellchat <- mergeCellChat(covid.list, add.names = names(covid.list))\n",
-    "cellchat <- computeNetSimilarityPairwise(cellchat, type = 'structural')\n",
-    "cellchat.embed <- netEmbedding(cellchat, type = 'structural')   "
+    "cellchat <- computeNetSimilarityPairwise(cellchat, type = type_)\n",
+    "cellchat.embed <- netEmbedding(cellchat, type = type_)   "
    ]
   },
   {
