balf and pbmc cellchat benchmarking

--- a/cellchat_for_tensor/04_cellchat_timing.ipynb
+++ b/cellchat_for_tensor/04_cellchat_timing.ipynb
@@ -10,7 +10,7 @@
     "#! /usr/bin/env Rscript\n",
     "'Time how long it takes to run cellchat given some samples\n",
     "Usage:\n",
-    "    04_cellchat_timing.r --number=<int> --group=<bool> [--seed=<int>]\n",
+    "    Rscript 04_cellchat_timing.r --number=<int> --group=<bool> [--seed=<int>]\n",
     "    \n",
     "Options:\n",
     "    -h --help  Show this screen.\n",
@@ -51,8 +51,9 @@
     "\n",
     "RhpcBLASctl::blas_set_num_threads(1) # no multithreading\n",
     "\n",
+    "# parameters\n",
     "cell_grouper<-'majorType'\n",
-    "type_ = 'functional'"
+    "type_<-'functional'"
    ]
   },
   {
@@ -73,18 +74,6 @@
     "group<-opts[['group']]\n",
     "seed<-opts[['seed']]\n",
     "set.seed(seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "eastern-attraction",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# seed=NULL\n",
-    "# number = 3\n",
-    "# group = 1"
    ]
   },
   {
@@ -157,7 +146,7 @@
     "cell.types<-Reduce(intersect, lapply(counts, function(df) unique(md.cell[colnames(df), cell_grouper])))\n",
     "cell.ids<-rownames(md.cell[md.cell[[cell_grouper]] %in% cell.types, ])   \n",
     "# counts<-lapply(setNames(counts, counts), function(df) df[,colnames(df) %in% cell.ids])  # lapply version slow for some reason, see for loop below                    \n",
-    " for (n in names(counts)){ \n",
+    "for (n in names(counts)){\n",
     "    df<-counts[[n]]\n",
     "    counts[[n]]<-df[,colnames(df) %in% cell.ids]\n",
     "}"
@@ -381,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "systematic-postcard",
+   "id": "charming-appeal",
    "metadata": {},
    "outputs": [],
    "source": []
