--- a/cellchat_for_tensor/05A_cellchat_classification_pbmc.ipynb
+++ b/cellchat_for_tensor/05A_cellchat_classification_pbmc.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "coordinated-playlist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "owned-flood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "tamil-closure",
    "metadata": {},
    "source": [
     "Load data:"
@@ -48,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "experimental-shape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "heavy-relay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "interesting-carbon",
    "metadata": {},
    "source": [
     "Run cellchat:"
@@ -104,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "subtle-twins",
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "linear-polls",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R [conda env:cellchat]",
+   "display_name": "R [conda env:cellchat] *",
    "language": "R",
    "name": "conda-env-cellchat-r"
   },
