separate simulation code for general use from analyses conducted for manuscript

--- a/explore/01_Simulated-Tensor_Example.ipynb
+++ b/explore/01_Simulated-Tensor_Example.ipynb
@@ -31,9 +31,9 @@
     "import matplotlib.transforms as mtrans\n",
     "import seaborn as sns\n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(1, '../cell2cell/')\n",
-    "import cell2cell as c2c\n",
+    "# import sys\n",
+    "# sys.path.insert(1, '../cell2cell/')\n",
+    "import cell2cell as c2c # version 0.4.0\n",
     "from cell2cell.tensor.tensor import BaseTensor\n",
     "from cell2cell.tensor.factorization import _compute_norm_error\n",
     "\n",
@@ -42,8 +42,8 @@
     "\n",
     "\n",
     "# specify path to save figures\n",
-    "fig_path = 'figures/example_figures/'#'/data2/hratch/cci_dt/figures/'\n",
-    "data_path = 'data/'#'/data2/hratch/cci_dt/noise_v_error/'\n",
+    "fig_path = #'figures/example_figures/'#'/data2/hratch/cci_dt/figures/'\n",
+    "data_path = #'data/'#'/data2/hratch/cci_dt/noise_v_error/'\n",
     "version = 1\n",
     "seed = 17"
    ]
@@ -689,7 +689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cci_dt] *",
+   "display_name": "Python [conda env:cci_dt]",
    "language": "python",
    "name": "conda-env-cci_dt-py"
   },
