--- a/explore/02_Noise-Impact.ipynb
+++ b/explore/02_Noise-Impact.ipynb
@@ -1017,7 +1017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cci_dt] *",
+   "display_name": "Python [conda env:cci_dt]",
    "language": "python",
    "name": "conda-env-cci_dt-py"
   },
