--- a/explore/03A - Robustness-to-Noise-Analysis.ipynb
+++ b/explore/03A - Robustness-to-Noise-Analysis.ipynb
@@ -173,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cci_dt] *",
+   "display_name": "Python [conda env:cci_dt]",
    "language": "python",
    "name": "conda-env-cci_dt-py"
   },
