--- a/explore/03A - Robustness-to-Noise-Analysis.ipynb
+++ b/explore/03A - Robustness-to-Noise-Analysis.ipynb
@@ -51,9 +51,9 @@
     "        sys.stdout.close()\n",
     "        sys.stdout = self._original_stdout\n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(1, '../cell2cell/')\n",
-    "import cell2cell as c2c\n",
+    "# import sys\n",
+    "# sys.path.insert(1, '../cell2cell/')\n",
+    "import cell2cell as c2c #v0.4.0\n",
     "from cell2cell.tensor.tensor import BaseTensor\n",
     "from cell2cell.tensor.factorization import _compute_norm_error, _compute_tensor_factorization\n",
     "\n",
